fix work index on mobile

--- a/src/works/style.css
+++ b/src/works/style.css
@@ -52,7 +52,7 @@
 #works #index .work a {
   display: block;
   border: 0;
-  flex-shrink: 0;
+  flex-shrink: 1;
 }
 
 #works #index .work a:hover {
@@ -92,6 +92,7 @@
   font-size: 12px;
   line-height: 1.5;
   margin-left: 10px;
+  flex-basis: 30%;
 }
 
 #works #index .work #meta #title {
